tests/testsuite/snapshots/testsuite__repl__case_3_negative_nil.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: "- nil;"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0mError: type error in unary operator `-`: operand has type `Nil` but `-` requires type `Number`
   ╭─[<input>:1:1]
   │
 1 │ - nil;
   │ ┬ ─┬─  
   │ │  ╰─── this is of type `Nil`
   │ │      
   │ ╰────── the operator in question
   │ 
   │ Help: operator `-` can only be applied to numbers
───╯
[0mλ» [1m[0m
----- stderr -----
